Fix CORS: make allowed origins configurable instead of hardcoding localhost